# goofiboot

./: .gitignore  Makefile.am  README.md  README.rst  autogen.sh  configure.ac  dead.package
man/: goofiboot.xml  gummiboot.xml
src/: common.h
src/efi/: console.c  console.h  goofiboot.c  graphics.c  graphics.h  gummiboot.c  linux.c  linux.h  pefile.c  pefile.h  stub.c  util.c  util.h
src/setup/: efivars.c  efivars.h  setup.c
test/: test-create-disk.sh
